# MCPortal

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
app/: __init__.py  config.py  extensions.py  forms.py  models.py  security.py
app/routes/: __init__.py  approvals.py  audit.py  auth.py  commands.py  dashboard.py  files.py  mods.py  settings.py  users.py
app/services/: approvals.py  audit.py  files.py  permissions.py  server_control.py  server_setup.py  system_settings.py  uploads.py
app/static/css/: site.css
app/templates/: base.html
app/templates/approvals/: index.html
app/templates/audit/: index.html
app/templates/auth/: bootstrap.html  login.html  password.html
app/templates/commands/: index.html
app/templates/dashboard/: index.html
app/templates/files/: detail.html  index.html
app/templates/macros/: icons.html
app/templates/mods/: index.html
app/templates/settings/: index.html
app/templates/users/: index.html  permissions.html
tests/: conftest.py  test_auth.py  test_requests.py  test_users.py
